--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -474,7 +474,7 @@
         align-items: center;
         justify-content: center;
 
-        background-image: url("../../../static/img/road.png");
+        background-image: url("../../../static/banner/christmass_tree.png");
 
         /* Set a specific height */
  
