--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -474,6 +474,10 @@
             font-size: 2em;
         }
     }
+    .banner-text h1 {
+        margin: 0;
+        font-size: 11vw;
+    }
 }
 
 @media only screen and (max-width: 450px) {
