christmas theme not sure

--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -1,5 +1,9 @@
 .footer-section{
-    background: #191818;
+    background-color: #191818;
+    background-image: url('../../../static/img/christmass tree.png');
+    background-repeat: no-repeat;
+    background-position: 90rem 90px;
+    background-size: 30%;
     padding: 5% 14%;
     margin: 0 auto;
 
