--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -344,11 +344,16 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 700px;
+    background-image: url('../../../static/img/bible.png');
+    background-repeat:no-repeat;
+    background-position: 90rem 450px;
+    background-size: 30%;
+
 
     .box-one{
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
+        justify-content: flex-end;  
         background: #24374B;
         align-items: flex-start;
         padding: 0 15%;
@@ -424,7 +429,7 @@
         content: "";
         width: 212px;
         height: 444px;
-        background:url("../../../static/img/chair.png");
+        // background:url("../../../static/img/bible.png");
         position: absolute;
         display: inline-block;
         right: 0;
@@ -526,15 +531,19 @@
 }
 
 .text-content-wrapper{
-
-    background: hsla(23, 100%, 97%, 0.49);
+    
+    // background-color: hsla(23, 100%, 97%, 0.49);
+    background-image: url('../../../static/img/santa.png');
+    background-repeat:no-repeat;
+    background-position:0px 400px;
+    background-size: 30%;
     display: flex;
     height: 700px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #fff3ec;
-
+    background-color: #fff3ec;
+    
     h1{
         color: #BC6F3C;
         font-size: 6vw;
@@ -555,7 +564,7 @@
         text-align: center;
         font-size: 13px;
     }
-
+    
     span{
         &:before{
             content: '';
