--- a/src/assets/scss/pages.scss
+++ b/src/assets/scss/pages.scss
@@ -8,12 +8,14 @@ $prm-font-size : 12px;
 
 
 .web-banner{
-    height: 300px;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
+    overflow: hidden;
+    height: 60vh;
+    background-position: bottom center;
     background-size: cover;
-    background-image: url("../../../static/banner/arch_banner.jpg");
+    opacity: 1;
+    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+    background-color: rgb(37, 37, 37);
+    background-image: url(https://ld-wp73.template-help.com/wordpress/prod_21235/v1/wp-content/uploads/2018/11/home-bg-2.png);
 
     span{
         letter-spacing: 1.1em;
