author's updates and changes

--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -177,7 +177,7 @@
     text-align: center;
 
     &:before{
-        content: 'Author';
+        content: '';
         position: absolute;
         left: 0;
         transform: rotate(-90deg);
