--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -88,6 +88,10 @@
         margin: 1.1em 0 !important;
         font-size: 14px;
     }
+    .readmore{
+        font-size: 13px;
+        color: rgb(223, 223, 223) !important;
+    }
 }
 
 .footer-paragraph-info{
