--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -106,6 +106,7 @@
         .box-element-left{
             button{
                 position: relative;
+                top: 10px;
                 display: block;
                 margin: 28px auto;
                 transform: translate(0,0);
