--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -88,9 +88,14 @@
         margin: 1.1em 0 !important;
         font-size: 14px;
     }
-    .readmore{
-        font-size: 13px;
-        color: rgb(223, 223, 223) !important;
+    .gift-guide{
+        background: #d8bea3;
+        color: #bf7b0b !important;
+        padding: 10px 0;
+        display: block;
+        width: 306px;
+        text-align: center;
+        border-radius: 2px;
     }
 }
 
