--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -50,6 +50,11 @@
 
 @media only screen and (max-width: 990px) {
 
+    .gift-guide{
+        margin: 0 auto 10px;
+    }
+
+
     .text-content-wrapper{
         height: 500px;
     }
