--- a/src/assets/scss/responsive.scss
+++ b/src/assets/scss/responsive.scss
@@ -50,8 +50,12 @@
 
 @media only screen and (max-width: 990px) {
 
+    #newsletter p.guide-cont{
+        margin: 0 0 20px !important;
+    }
+
     .gift-guide{
-        margin: 0 auto 10px;
+        margin: 0 auto;
     }
 
 
