--- a/src/assets/scss/pages.scss
+++ b/src/assets/scss/pages.scss
@@ -1,457 +1,466 @@
-
-
 /*Pages*/
 @import "responsive.scss";
 
 $primary-font: "Quicksand", sans-serif !important;
-$prm-font-size : 12px;
+$prm-font-size: 12px;
 
+.web-banner {
+	overflow: hidden;
+	height: 60vh;
+	background-position: bottom center;
+	background-size: cover;
+	opacity: 1;
+	transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+	background-color: rgb(37, 37, 37);
+	background-image: url(https://ld-wp73.template-help.com/wordpress/prod_21235/v1/wp-content/uploads/2018/11/home-bg-2.png);
 
-.web-banner{
-    overflow: hidden;
-    height: 60vh;
-    background-position: bottom center;
-    background-size: cover;
-    opacity: 1;
-    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
-    background-color: rgb(37, 37, 37);
-    background-image: url(https://ld-wp73.template-help.com/wordpress/prod_21235/v1/wp-content/uploads/2018/11/home-bg-2.png);
+	span {
+		letter-spacing: 1.1em;
+		text-transform: uppercase;
+		line-height: 2;
+		color: #fff !important;
+	}
 
-    span{
-        letter-spacing: 1.1em;
-        text-transform: uppercase;
-        line-height: 2;
-        color: #fff !important;
-    }
-
-    h1{
-        font-size: 4em;
-        font-weight: 900;
-        text-transform: uppercase;
-        color: #fff;
-    }
+	h1 {
+		font-size: 4em;
+		font-weight: 900;
+		text-transform: uppercase;
+		color: #fff;
+	}
 }
 
-.wrapper-ds{
-    display: flex;
-    flex-direction: column;
-    height: 300px;
-    justify-content: center;
-    align-items: center;
+.wrapper-ds {
+	display: flex;
+	flex-direction: column;
+	height: 300px;
+	justify-content: center;
+	align-items: center;
 }
 
-.columns{
+.columns {
 	margin-bottom: 0;
 }
 
-.body-author-contents{
-    margin: 4em 0 !important;
-    // background: #eee;
-    padding: 44px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.body-author-contents {
+	margin: 4em 0 !important;
+	// background: #eee;
+	padding: 44px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 }
 
-.heading-quote{
+.heading-quote {
+	padding: 0 59px;
+	margin: 3.1em 0;
 
-    padding: 0 59px;
-    margin: 3.1em 0;
-
-	h4{
-        font-weight: 100;
-        line-height: 1.2;
-        font-size: 3vw;
-        font-style: italic;
-        margin-top: 49px !important;
-        color: #000 !important;
-        font-family: 'Scheherazade', serif;
+	h4 {
+		font-weight: 100;
+		line-height: 1.2;
+		font-size: 3vw;
+		font-style: italic;
+		margin-top: 49px !important;
+		color: #000 !important;
+		font-family: 'Scheherazade', serif;
 	}
 }
 
-.ata-span-fx{
+.ata-span-fx {
 	font-size: 9px;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    margin-top: 29px;
-    display: block;
-    color: #929292;
+	letter-spacing: 5px;
+	text-transform: uppercase;
+	margin-top: 29px;
+	display: block;
+	color: #929292;
 }
 
-.author-image-container{
-	img{
-        width: 770px;
-	    border: 12px solid #e0e0db57;
-	}
-}       
-
-.article-section{
-	p{
-	    line-height: 2.2;
-	    // text-align: justify;
-        color: #696969;
-        margin-bottom: 2em;
+.author-image-container {
+	img {
+		width: 770px;
+		border: 12px solid #e0e0db57;
 	}
 }
 
-.author-name{
-    
-    // position: absolute;
-    font-size: 26px;
-    margin: 2em 16px;
-    display: block;
-    text-align: right;
-    
-    .author-span-ft{
-        display: block;
-        font-size: 9px;
-        letter-spacing: 4px;
-        margin-bottom: 9px;
-        color: #ec360c;
-        text-transform: uppercase;
-    }
+.article-section {
+	p {
+		line-height: 2.2;
+		// text-align: justify;
+		color: #696969;
+		margin-bottom: 2em;
+	}
+}
+
+.author-name {
+	// position: absolute;
+	font-size: 26px;
+	margin: 2em 16px;
+	display: block;
+	text-align: right;
+
+	.author-span-ft {
+		display: block;
+		font-size: 9px;
+		letter-spacing: 4px;
+		margin-bottom: 9px;
+		color: #ec360c;
+		text-transform: uppercase;
+	}
 }
 
 /*About The Book*/
-.wrapperMain{
-    margin: 123px 0;
+.wrapperMain {
+	margin: 123px 0;
 }
 
-.bookImgContainer{
-
+.bookImgContainer {
 	text-align: center;
 
-	img{
+	img {
 		max-width: 100%;
-	    width: 69%;
-	    padding: 0px;
-	    border: 29px solid #fff;
-        margin:0;
+		width: 69%;
+		padding: 0px;
+		border: 29px solid #fff;
+		margin: 0;
 	}
 }
 
-.fullSection{
-    // padding: 2em 3em;
-    line-height: 0;
+.fullSection {
+	// padding: 2em 3em;
+	line-height: 0;
 }
 
-.contentBook, .fullSection{
+.contentBook,
+.fullSection {
+	text-align: justify;
+	line-height: 2;
+	// padding: 2rem;
 
-    text-align: justify;
-    line-height: 2;
-    // padding: 2rem;
-    
-    p{
-        line-height: 2;
-        margin: 3em 0 !important;
-    }
+	p {
+		line-height: 2;
+		margin: 3em 0 !important;
+	}
 }
 
+.booklinkBlocks {
+	background: none !important;
+	color: #000 !important;
+	box-shadow: none !important;
+	line-height: normal !important;
+	height: auto;
+	margin-top: 20px;
+	text-align: right;
 
-.booklinkBlocks{
-    background: none !important;
-    color: #000 !important;
-    box-shadow: none !important;
-    line-height: normal !important;
-    height: auto; 
-    margin-top: 20px;
-    text-align: right;
+	span {
+		margin-right: 13px;
+		display: block;
+		margin-bottom: 16px;
+		font-style: italic;
+		font-size: 12px;
+	}
 
-    span{
-        margin-right: 13px;
-        display: block;
-        margin-bottom: 16px;
-        font-style: italic;
-        font-size: 12px;
-    }
+	li {
+		list-style: none;
+		display: inline-block;
+		padding: 0 4px;
+	}
 
-    li{
-        list-style: none;
-        display: inline-block;
-        padding: 0 4px;
-    }
-     
-    a{
-        text-decoration: none;
-        background: #52667b;
-        padding: 4px 15px;
-        color: #fff !important;
-        font-size: 13px;
-    }
-
+	a {
+		text-decoration: none;
+		background: #52667b;
+		padding: 4px 15px;
+		color: #fff !important;
+		font-size: 13px;
+	}
 }
 
 /*Contact*/
-.formInputs{
-    margin-top: 11px !important;
-    padding: 0.89em 0.246em !important;
-    border: 1px solid #cccccc !important;
-    color: #636363ee !important;
-    border-radius: 1px !important;
-    width: 100% !important;
-    max-width: 100%;
+.formInputs {
+	margin-top: 11px !important;
+	padding: 0.89em 0.246em !important;
+	border: 1px solid #cccccc !important;
+	color: #636363ee !important;
+	border-radius: 1px !important;
+	width: 100% !important;
+	max-width: 100%;
 }
 
-
-#form-wrapper, #textAreaContainer{
-    label{
-        display: block;
-        font-size: 13px;
-        letter-spacing: 1px;
-        margin-bottom: 13px;
-    }
+#form-wrapper,
+#textAreaContainer {
+	label {
+		display: block;
+		font-size: 13px;
+		letter-spacing: 1px;
+		margin-bottom: 13px;
+	}
 }
-       
+
 .asterisk {
 	color: #fd1111;
-    padding: 7px;
+	padding: 7px;
 }
 
-.contactMessage{
+.contactMessage {
 	font-size: 25px !important;
-    margin-bottom: 24px !important;	
+	margin-bottom: 24px !important;
 }
 
-.flexMainContainer{
+.flexMainContainer {
 	margin: 71px 0;
 }
 
-.textArea{
-    height: 250px;
-    border: 1px solid #cecece;
-    width: 100%;	
+.textArea {
+	height: 250px;
+	border: 1px solid #cecece;
+	width: 100%;
 }
 
-.abtiaryButton{
-    padding: 13px 74px;
-    border: none;
-    background: #ceac95;
-    color: #fff;
-    text-transform: uppercase;
-    margin-top: 39px;
+.abtiaryButton {
+	padding: 13px 74px;
+	border: none;
+	background: #ceac95;
+	color: #fff;
+	text-transform: uppercase;
+	margin-top: 39px;
 }
 
-.buttonContainer{
-	 text-align: center;
+.buttonContainer {
+	text-align: center;
 }
 
-.notValidForm{
-    margin-top: 11px !important;
-    padding: 1px 6px !important;
-    border: 1px solid #ffa8a8ee !important;	
-    color: #636363ee !important;
-    border-radius: 1px !important;
-    width: 97% !important;
-    max-width: 100%;
+.notValidForm {
+	margin-top: 11px !important;
+	padding: 1px 6px !important;
+	border: 1px solid #ffa8a8ee !important;
+	color: #636363ee !important;
+	border-radius: 1px !important;
+	width: 97% !important;
+	max-width: 100%;
 }
 
-.invalidMessage{
-    color: #e83f3f;	
+.invalidMessage {
+	color: #e83f3f;
 }
 
-.errorHandler{
+.errorHandler {
 	background: #f18d8d;
-    padding: 18px;
-    margin-bottom: 45px;
-    border-radius: 7px;
-    color: #efff;
+	padding: 18px;
+	margin-bottom: 45px;
+	border-radius: 7px;
+	color: #efff;
 }
 
-.spanErrorRequired{
-    color: #ff8a8a;
+.spanErrorRequired {
+	color: #ff8a8a;
 }
 
-.CommentSection{
-    margin-bottom: 50px;
+.CommentSection {
+	margin-bottom: 50px;
 }
 
-.content_body_paragraphs{
-    margin: 106px 0;
-    line-height: 2;
+.content_body_paragraphs {
+	margin: 106px 0;
+	line-height: 2;
 }
 
-.booklinkBlocks{
-    background: none !important;
-    color: #000 !important;
-    box-shadow: none !important;
-    line-height: normal !important;
-    height: auto; 
-    margin-top: 20px;
-    text-align: right;
+.booklinkBlocks {
+	background: none !important;
+	color: #000 !important;
+	box-shadow: none !important;
+	line-height: normal !important;
+	height: auto;
+	margin-top: 20px;
+	text-align: right;
 
-    span{
-        margin-right: 13px;
-        display: block;
-        margin-bottom: 16px;
-        font-style: italic;
-        font-size: 12px;
-    }
+	span {
+		margin-right: 13px;
+		display: block;
+		margin-bottom: 16px;
+		font-style: italic;
+		font-size: 12px;
+	}
 
-    li{
-        list-style: none;
-        display: inline-block;
-        padding: 0 4px;
-    }
-     
-    a{
-        text-decoration: none;
-        background: #b29e46;
-        padding: 4px 15px;
-        color: #fff;
-        font-size: 13px;
-    }
+	li {
+		list-style: none;
+		display: inline-block;
+		padding: 0 4px;
+	}
+
+	a {
+		text-decoration: none;
+		background: #b29e46;
+		padding: 4px 15px;
+		color: #fff;
+		font-size: 13px;
+	}
 }
 
-
-
-.disqus-container-bars{
-      margin-top: 87px;  
+.disqus-container-bars {
+	margin-top: 87px;
 }
 
 /*Forms*/
-.formSuccess{
-    background: #57c57e;
-    padding: 20px;
-    margin-bottom: 21px;
-    color: #ffffff;
+.formSuccess {
+	background: #57c57e;
+	padding: 20px;
+	margin-bottom: 21px;
+	color: #ffffff;
 }
 
-.errorForm{
-    background: #ffd7d7;
-    padding: 20px;
-    margin-bottom: 21px;
-    color: #ff5a5a;
+.errorForm {
+	background: #ffd7d7;
+	padding: 20px;
+	margin-bottom: 21px;
+	color: #ff5a5a;
 }
 
-.flex-container-fx{
-    max-width:1000px;
-    margin:0 auto;
-    padding: 0 46px;
+.flex-container-fx {
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 0 46px;
 }
-
 
 @media only screen and (max-width: 950px) {
-    .booklinkBlocks{
-        text-align: center;
-    }
+	.booklinkBlocks {
+		text-align: center;
+	}
 }
 
 /*privacy-policy-content*/
 
-#privacy-policy-content, 
-#terms-and-conditions-content{
-    margin: 7em 0;
-    h2{
-    
-        font-size: 2em;
-        margin: 1em 0;
+#privacy-policy-content,
+#terms-and-conditions-content {
+	margin: 7em 0;
+	h2 {
+		font-size: 2em;
+		margin: 1em 0;
 
-        &:after{
-            content: '';
-            width: 101px;
-            height: 2px;
-            background-color: #ff7a7a;
-            display: block;
-            margin: 11px 0;
-        }
-    }
-    p{
-        margin-bottom: 1em;
-    }
+		&:after {
+			content: '';
+			width: 101px;
+			height: 2px;
+			background-color: #ff7a7a;
+			display: block;
+			margin: 11px 0;
+		}
+	}
+	p {
+		margin-bottom: 1em;
+	}
 }
 
-
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color:#e4e4e4;
-    font-family: $primary-font;
-    font-size: $prm-font-size;
+::-webkit-input-placeholder {
+	/* Chrome/Opera/Safari */
+	color: #e4e4e4;
+	font-family: $primary-font;
+	font-size: $prm-font-size;
 }
 
-::-moz-placeholder { /* Firefox 19+ */
-    color:#e4e4e4;
-    font-family: $primary-font;
-    font-size: $prm-font-size;
+::-moz-placeholder {
+	/* Firefox 19+ */
+	color: #e4e4e4;
+	font-family: $primary-font;
+	font-size: $prm-font-size;
 }
 
-:-ms-input-placeholder { /* IE 10+ */
-    color:#e4e4e4;
-    font-family: $primary-font;
-    font-size: $prm-font-size;
+:-ms-input-placeholder {
+	/* IE 10+ */
+	color: #e4e4e4;
+	font-family: $primary-font;
+	font-size: $prm-font-size;
 }
 
-:-moz-placeholder { /* Firefox 18- */
-    color:#e4e4e4;
-    font-family: $primary-font;
-    font-size: $prm-font-size;
+:-moz-placeholder {
+	/* Firefox 18- */
+	color: #e4e4e4;
+	font-family: $primary-font;
+	font-size: $prm-font-size;
 }
-
 
 /*DISQUS*/
 
-#thread__wrapper{
-    padding: 33px;
+#thread__wrapper {
+	padding: 33px;
 }
 
+.contentBook {
+	h1 {
+		text-align: left;
+		font-size: 2vw;
+		font-weight: 700;
+		color: #000;
+	}
+	span {
+		font-weight: bold;
+		color: #c19820 !important;
+		margin: 17px 0;
+		display: block;
+		font-size: 15px;
+		letter-spacing: 4px;
+	}
 
-.contentBook{
-    h1{
-       text-align: left;
-       font-size: 2vw;
-       font-weight:700;
-       color: #000;
-
-    }
-    span{
-        font-weight: bold;
-        color: #c19820 !important;
-        margin: 17px 0;
-        display: block;
-        font-size: 15px;
-        letter-spacing: 4px;
-    }
-
-    p{
-        margin-top: 3em;   
-    }
+	p {
+		margin-top: 3em;
+	}
 }
 
-
-.book-container-ft{
-    margin-bottom: 4em !important;
+.book-container-ft {
+	margin-bottom: 4em !important;
 }
 
-
-.info-section-address{
-    text-align: center;
-    margin: 39px 0;
-    border-top: 1px solid #eee;
-    span{
-        display: block;
-        font-weight: 100 !important;
-        margin: 30px 0px;
-        font-size: 13px;
-        h5{
-            text-align: center;
-            margin: 21px 0 !important;
-            letter-spacing: 5px;
-            text-transform: uppercase;
-        }
-    }
+.info-section-address {
+	text-align: center;
+	margin: 39px 0;
+	border-top: 1px solid #eee;
+	span {
+		display: block;
+		font-weight: 100 !important;
+		margin: 30px 0px;
+		font-size: 13px;
+		h5 {
+			text-align: center;
+			margin: 21px 0 !important;
+			letter-spacing: 5px;
+			text-transform: uppercase;
+		}
+	}
 }
 
-.auth-paragrpah{
-    span{
-        &:nth-child(1){
-            margin-right: 4px;
-            color: #c5821d !important;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            font-size: 21px;
-        }
-        &:nth-child(2){
-            font-family: "augusta-free";
-            display: block;
-            font-size: 5rem;
-        }
-    }
+.auth-paragrpah {
+	span {
+		&:nth-child(1) {
+			margin-right: 4px;
+			color: #c5821d !important;
+			font-weight: bold;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+			font-size: 21px;
+		}
+		&:nth-child(2) {
+			font-family: "augusta-free";
+			display: block;
+			font-size: 5rem;
+		}
+	}
+}
+
+.external-reviews-cont {
+	background: #d8bea3;
+	padding: 30px;
+	border-radius: 4px;
+	border-left: 3px solid #bd8954;
+	margin-bottom: 40px;
+
+	.reviews-list {
+		margin: 20px 0 0 20px;
+
+		li {
+			border-left: 3px solid #bd8954;
+			padding: 10px;
+			margin-bottom: 20px;
+
+			a {
+				font-size: inherit;
+				color: #bf7b0b !important;
+			}
+		}
+	}
 }
